#69 Fix Admin Home div spacing. Add footer banner and link to return to top.

--- a/GoFit/Content/Site.css
+++ b/GoFit/Content/Site.css
@@ -16,6 +16,20 @@
 	-webkit-transition: all 0.3s ease-out; /* Safari */
 }
 
+.footerBanner {
+    background-color: #222;
+    margin: 10px 0px;
+    padding: 15px 15px;
+    min-height: 50px;
+    background-image: url(../Images/footer.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 5px;
+    box-shadow: #000 5px 5px 3px;
+    -webkit-box-shadow: #000 5px 5px 3px;
+    -moz-box-shadow: #000 5px 5px 3px;
+}
+
 .gofit-header {
     background-color: #222;
     margin: 10px 0px;
@@ -39,7 +53,7 @@
 .gofit-invis-link {
     display: block;
     width: 75px;
-    height: 75px;
+    height: 60px;
     margin-left: auto;
     margin-right: auto;
 }
